<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/drawer"
    android:layout_height="match_parent"
    tools:context="com.example.mike.parkingapplication.homeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ViewAnimator
                android:id="@+id/viewAnimator"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:id="@+id/relativeLO2"
                    android:layout_width="match_parent"
                    android:layout_height="511dp">

                    <CalendarView
                        android:id="@+id/calendarView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textView9"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="22dp" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="26dp"
                        android:text="@string/open"
                        android:textAlignment="center"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/button3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@+id/calendarView"
                        android:layout_below="@+id/calendarView"
                        android:layout_marginStart="50dp"
                        android:layout_marginTop="17dp"
                        android:text="Cancel" />

                    <Button
                        android:id="@+id/button4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/button3"
                        android:layout_alignBottom="@+id/button3"
                        android:layout_alignEnd="@+id/calendarView"
                        android:layout_marginEnd="38dp"
                        android:text="Check In" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/relativeLO"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/SubTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignStart="@+id/datePicker"
                        android:layout_marginStart="27dp"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/time"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/subTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignEnd="@+id/numberPicker2"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="26dp"
                        android:layout_toEndOf="@+id/SubTitle"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/duration"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/TimeText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/datePicker"
                        android:layout_alignEnd="@+id/SubTitle"
                        android:layout_marginBottom="73dp"
                        android:layout_marginEnd="12dp"
                        android:background="@drawable/side_nav_bar"
                        android:backgroundTint="@android:color/background_light"
                        android:fontFamily="sans-serif-condensed"
                        android:shadowColor="@color/colorPrimary"
                        android:text="@string/time1"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat"
                        android:textColor="@color/colorPrimary"
                        android:textSize="30sp" />

                    <DatePicker
                        android:id="@+id/datePicker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/numberPicker"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="29dp" />

                    <NumberPicker
                        android:id="@+id/numberPicker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/subTitle"
                        android:layout_marginTop="36dp"
                        android:layout_toStartOf="@+id/button2" />

                    <NumberPicker
                        android:id="@+id/numberPicker2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/datePicker"
                        android:layout_alignEnd="@+id/datePicker" />

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignEnd="@+id/datePicker"
                        android:layout_alignParentBottom="true"
                        android:layout_marginEnd="15dp"
                        android:text="@string/search" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@+id/TimeText"
                        android:layout_toEndOf="@+id/numberPicker"
                        android:layout_toStartOf="@+id/numberPicker2"
                        android:text="@string/Colon"
                        android:textAlignment="center"
                        android:textSize="24sp" />

                </RelativeLayout>

            </ViewAnimator>

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/barchart"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@+id/button2"
                android:layout_marginBottom="47dp">

            </com.github.mikephil.charting.charts.BarChart>

            <TextView
                android:id="@+id/layerTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/schedule_a_reservation"
                android:textAlignment="center"
                android:textSize="@dimen/user_pools_form_margin"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.NavigationView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/navigation_view"
        app:menu="@menu/nav_menu"
        android:layout_gravity="start">

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
